lab1/Test/L1-A-13-8.output
Error Type B at Line 5
Error Type A at Line 22
Error Type B at Line 24
Error Type B at Line 27
Error Type B at Line 30
Error Type A at Line 43
