lab1/Test/L1-A-13-8.cmm
int ;
float Wm4P ( ) {
  struct trg5xJpZNEerU5sGF d71DoeXCv = Q3sgCwDgqsPq1a 
    , Owl0ldNOJgw [ 1118483680 ] ;
  return < Q8PIF272J + NJGL3B_pH / ! ! - ! lITAm [ 
    OwNM9pMos056Pb1xz = ehxzw2Ly8_b0kK5J || XIZ5SjggQTile9 
    && r == Y1wz1Lr4QmWuq - s9kGdG6NQSpy * _NbQlGIi ( 
    IevUcmYkgdEz && W > UuBv2geCuqxQuCTdrWm8 + ( fucOiB0onaeRDWfuphO 
    <= ( WOL = BhS + - ( THfFp8 > ( OdmYIbO9XKlZdERAH 
    = QaFZC_WtFXvZwDPj61 || Ux == m [ _l2HMLxb8S || ANnd0YrbtWttVUnd 
    && ( FIUanUvsG || BcHyd2ZBg5xby == zNWDDfh2p ( FLmFm8QLDupKnMJoTsCt 
    , LxFPpdwLi0oS3OI ) - uWFaQ / s6hC8PEcKYIy * lyJFDyrbLRlfnvpaHT 
    * - ph_268lIJFK5 ) ] ) ) ) != QkamB_qtBF8Ue5U1OVxY 
    * kzhIEsQfsWsvhJP [ 2022562237 . JrK9qfvEayxX ] . 
    zZgslPKXdP >= JwBJ486CRXNEm ) / LOGAoiOHK ( ) ) ] 
    <= - 265010241.2046207889 . laM0o3acgPKtSC42uUt ;
}
int ;
struct {
  struct bb {
  }Z_lUv0CXz3ut36Tixnk ;
~}v1B5Io1jE71Qem 
;
int CrKJs3vrMG_e4 ( int , int eKbstkdEUK45sGnwc ) 
  {
  if ( _oOLb )   o9IJxRuRrQB9x ;
else   if return ( kFWH )   if ( rPFvDVuTffRZdBRyN 
    ) {
    Vfdyoypz7 ;
    if FTmPI )     while ( i4C1rhQNuB5FzaGZQoKy ) 
          mTFFJdTMG6Wp5GQe ;

else     AHd1S5aR_SA ;

  }


}
int ;
int ;
int cLYWn , hjqQHmMaG 

;\
int ;
int ;
